--- a/mhb-prtflio/angular.json
+++ b/mhb-prtflio/angular.json
@@ -31,7 +31,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.sass"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.js", "node_modules/popper.js/dist/popper.js"]
+            "scripts": ["node_modules/jquery/dist/jquery.js", "node_modules/popper.js/dist/umd/popper.js", "node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
             "production": {
